<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Shared -->
    <string name="settings_app_name" translatable="false">Spoty</string>
    <string name="settings_title">Ajustes</string>
    <string name="settings_back">Volver</string>
    <string name="settings_available">Disponible</string>
    <string name="settings_unavailable">No disponible</string>
    <string name="settings_disabled">Desactivado</string>
    <string name="settings_delete">Eliminar</string>
    <string name="settings_retry">Reintentar</string>
    <string name="settings_unknown_error">Error desconocido</string>
...
    <string name="settings_lyrics_typeface_serif">Serif</string>
    <string name="settings_lyrics_typeface_mono">Monoespaciada</string>
    <string name="settings_spotify_connection_section">Conexión con Spotify</string>
    <string name="settings_connect_name_title">Nombre en Spotify Connect</string>
    <string name="settings_auto_transfer_title">Transferencia automática</string>
    <string name="settings_auto_transfer_description">Hacer que Spoty sea el dispositivo activo para reproducir</string>
    <string name="settings_advanced_title">Ajustes avanzados</string>
    <string name="settings_client_id_title">Client ID de Spotify</string>
    <string name="settings_client_secret_title">Client Secret de Spotify</string>

    <!-- Debug -->
    <string name="settings_debug_general_header">General</string>
    <string name="settings_debug_build">Compilación #</string>
...
